<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/menu_cart"
        android:showAsAction="always"
        android:title="@string/cart"/>
    <item
        android:id="@+id/expandAll"
        android:title="@string/expandAll"
        app:showAsAction="never"/>
    <item
        android:id="@+id/collapseAll"
        android:title="@string/collapseAll"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_dialog_amuont"
        android:title="@string/fix_amount"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_bar"
        android:showAsAction="always"
        android:title="Загрузка"/>
    <item
        android:id="@+id/menu_picture"
        android:title="@string/show_picture"
        app:showAsAction="always" />

</menu>
