<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/main_list_item_image_status"
        android:layout_width="70dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/main_list_item_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/main_list_item_image_status"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/main_list_item_image_status"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:text="@string/header_date"
        android:textIsSelectable="true"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/main_list_item_text_client"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/header_client"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/main_list_item_image_menu"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_clik_menu"/>

    <TextView
        android:id="@+id/main_list_item_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/main_list_item_text_client"
        android:layout_toLeftOf="@+id/main_list_item_image_menu"
        android:layout_toStartOf="@+id/main_list_item_image_menu"
        android:paddingTop="12dp"
        android:text="@string/header_sum"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/main_list_item_text_sub_client"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_list_item_text_client"
        android:layout_alignStart="@+id/main_list_item_text_client"
        android:layout_below="@+id/main_list_item_text_client"
        android:layout_marginTop="5dp"
        android:text="@string/header_address"
        android:textSize="10dp"/>
</RelativeLayout>