<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/main_heander_text_JurnalOrders"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/main_grey"
        android:gravity="center"
        android:paddingBottom="60dp"
        android:text="@string/JurnalOrders"
        android:textColor="@android:color/background_light"
        android:textSize="25sp"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/main_heander_image_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_heander_period"
            android:layout_gravity="right"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/main_heander_period"
            android:layout_toRightOf="@+id/main_heander_period"
            android:src="@mipmap/ic_plus"/>

        <TextView
            android:id="@+id/main_heander_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:text="@string/period"
            android:textColor="@color/main_sub_grey"/>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/main_heander_image_plus"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:id="@+id/main_heander_text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:singleLine="true"
                android:text="@string/header_date"/>

            <TextView
                android:id="@+id/main_heander_text_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/header_client"/>

            <TextView
                android:id="@+id/main_heander_text_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/header_sum"/>

        </RelativeLayout>

        <ListView
            android:id="@+id/main_heander_list_position"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/main_heander_space"/>

        <TextView
            android:id="@+id/main_heander_space"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/relativeLayout2"
            android:layout_centerHorizontal="true"
            android:background="@color/main_sub_grey"/>

    </RelativeLayout>

</RelativeLayout>